--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Get latest tag
         id: get_latest_tag
@@ -28,11 +28,12 @@ jobs:
 
       - name: Install Shopify CLI
         run: npm install -g @shopify/cli
+      
+      - name: Install dependencies
+        run: npm ci
 
-      - name: "Install dependencies and build tailwind css"
-        run: |
-          npm install
-          npm run tailwind:build
+      - name: Build Tailwind CSS
+        run: npm run tailwind:build
 
       - name: Upload theme
         run: |
