--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -30,7 +30,9 @@ jobs:
         run: npm install -g @shopify/cli
       
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install --no-optional=false
+          npm install @parcel/watcher-linux-x64-glibc@2.2.0 --no-save
 
       - name: Build Tailwind CSS
         run: npm run tailwind:build
@@ -39,7 +41,6 @@ jobs:
         run: |
           shopify theme push \
             --json \
-            -u
             --theme theme-${{ env.RELEASE_VERSION }} \
             --store ${{ secrets.SHOPIFY_STORE }} \
             --password ${{ secrets.SHOPIFY_CLI_THEME_TOKEN }}
