--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           npm install --no-optional=false
           npm install @parcel/watcher-linux-x64-glibc@2.2.0 --no-save
+          npm install @tailwindcss/oxide-linux-x64-gnu --no-save
 
       - name: Build Tailwind CSS
         run: npm run tailwind:build
