--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -28,7 +28,7 @@ jobs:
           echo "THEME_NAME=theme-${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
 
       - name: Install Shopify CLI
-        run: npm install -g @shopify/cli
+        run: npm install -g @shopify/cli@latest
       
       - name: Install dependencies
         run: |
