--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind:watch":"npx @tailwindcss/cli -i ./assets/tailwind-input.css -o ./assets/tailwind-output.css --watch",
-    "tailwind:build":"npx @tailwindcss/cli -i ./assets/tailwind-input.css -o ./assets/tailwind-output.css"
+    "tailwind:watch": "npx @tailwindcss/cli -i ./assets/tailwind-input.css -o ./assets/tailwind-output.css --watch",
+    "tailwind:build": "npx @tailwindcss/cli -i ./assets/tailwind-input.css -o ./assets/tailwind-output.css",
+    "prettier": "prettier",
+    "prepare": "husky"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@shopify/prettier-plugin-liquid": "^1.9.0",
+    "git-format-staged": "^3.1.1",
+    "prettier": "^3.5.3"
+  }
 }
