--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@shopify/prettier-plugin-liquid": "^1.9.0",
-    "git-format-staged": "^3.1.1",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3"
   }
 }
